--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 
 body {
   margin: 0;
+  background: #f5f5f5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -28,4 +29,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.ant-table-thead .ant-table-cell {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 700 !important;
+  color: #00538f !important;
+  border: none !important;
+  background-color: #eff3f8 !important;
+}
+
+.ant-table-thead .ant-table-cell::before {
+  width: 0 !important;
+}
+
+.even-row .ant-table-cell {
+  @apply bg-rowTable;
+}
+
+.ant-menu-submenu-open.ant-menu-submenu-selected .ant-menu-submenu-title {
+  @apply bg-sub text-main font-bold;
 }
